Try with jekyllBear as a theme instead of remote_theme.

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ github_username: ramseyt
 
 # Build settings
 # theme: minima
-remote_theme: jekyll-bear-theme
+theme: jekyll-bear-theme
+#remote_theme: jekyll-bear-theme
 plugins:
   - jekyll-feed
 
