Large content updates.

--- a/_config.yml
+++ b/_config.yml
@@ -111,9 +111,12 @@ Blog: /blog
 
 # Add general links to site pages here
 links:
-  Resume: /assets/resume.pdf
+  Tech: /tech
+  Music: /music
+  Contact: /contact
+# Resume: /assets/resume.pdf
   
 
 # Add links for more focus here
-special_links:
-  "Search": https://duckduckgo.com
+# special_links:
+#   "Search": https://duckduckgo.com
