--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ theme: jekyll-bear-theme
 #remote_theme: jekyll-bear-theme
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default.
