--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -52,8 +52,9 @@ jobs:
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         # uses: actions/upload-pages-artifact@v4
-        id: deployment
         uses: actions/upload-pages-artifact@v3.0.1
+        with:
+           name: github-pages
 
   # Deployment job
   deploy:
