--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -51,10 +51,11 @@ jobs:
           JEKYLL_ENV: production
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
-        # uses: actions/upload-pages-artifact@v4
-        uses: actions/upload-pages-artifact@v3.0.1
+        uses: actions/upload-pages-artifact@v4
+        # uses: actions/upload-pages-artifact@v3.0.1
         with:
            name: github-pages
+           path: _site/
 
   # Deployment job
   deploy:
