--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Ramsey Tantawi's Home on the Web
+title: Ramsey Tantawi
 email: contact@tantawi.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ramsey Tantawi's home on the web. Around in some form or another for...
